--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>My Odin Project GF recipes</h1>
-        <a href="recipes/happygf.html">Happy GF</a>
+        <ul>
+            <li><a href="recipes/happygf.html">Happy GF</a></li>
+        </ul>
     </body>
 </html>
