--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>My Odin Project GF recipes</h1>
+        <p>here are some recipes on how to make gf <em>happy</em>, <em>sad</em> and <em>madly in love</em></p>
         <ul>
             <li><a href="recipes/happygf.html">Happy GF</a></li>
         </ul>
