emphasize the heading

--- a/recipes/happygf.html
+++ b/recipes/happygf.html
@@ -7,6 +7,6 @@
     <title>Happy GF</title>
 </head>
 <body>
-    <h1>Happy Girlfriend</h1>
+    <h1><em>Happy Girlfriend</em></h1>
 </body>
 </html>
