--- a/recipes/happygf.html
+++ b/recipes/happygf.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1><em>Happy Girlfriend</em></h1>
+    <img src="images/happygf.jpeg" alt="a happy gf images">
 </body>
 </html>
