--- a/recipes/happygf.html
+++ b/recipes/happygf.html
@@ -9,5 +9,6 @@
 <body>
     <h1><em>Happy Girlfriend</em></h1>
     <img src="images/happygf.jpeg" alt="a happy gf images">
+    <h3>A Happy girlfriend means a happy day</h3>
 </body>
 </html>
