--- a/recipes/happygf.html
+++ b/recipes/happygf.html
@@ -10,5 +10,13 @@
     <h1><em>Happy Girlfriend</em></h1>
     <img src="images/happygf.jpeg" alt="a happy gf images">
     <h3>A Happy girlfriend means a happy day</h3>
+    <h4>ingredients</h4>
+        <ul>
+            <li>clean dishes</li>
+            <li>tidied laundry</li>
+            <li>good food</li>
+            <li>kisses</li>
+            <li>sleep</li>
+        </ul>
 </body>
 </html>
