--- a/recipes/happygf.html
+++ b/recipes/happygf.html
@@ -10,7 +10,7 @@
     <h1><em>Happy Girlfriend</em></h1>
     <img src="images/happygf.jpeg" alt="a happy gf images">
     <h3>A Happy girlfriend means a happy day</h3>
-    <h4>ingredients</h4>
+    <h4>Ingredients</h4>
         <ul>
             <li>clean dishes</li>
             <li>tidied laundry</li>
@@ -18,5 +18,13 @@
             <li>kisses</li>
             <li>sleep</li>
         </ul>
+    <h4>Steps</h4>
+        <ol>
+            <li>You let your gf sleep enough</li>
+            <li>Clean the dishes and tidy the laundry</li>
+            <li>Give her good food</li>
+            <li>Kiss her lots of kisses</li>
+        </ol>
+    <h4>and viola, you have a <em>Happy Girlfriend</em></h4>
 </body>
 </html>
