add 2 more links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <p>here are some recipes on how to make gf <em>happy</em>, <em>sad</em> and <em>madly in love</em></p>
         <ul>
             <li><a href="recipes/happygf.html">Happy GF</a></li>
+            <li><a href="recipes/sadgf.html">Sad GF</a></li>
+            <li><a href="recipes/madinlovegf.html">Mad in love GF</a></li>
         </ul>
     </body>
 </html>
