add paragraph for no reason

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
             <li><a href="recipes/sadgf.html">Sad GF</a></li>
             <li><a href="recipes/madinlovegf.html">Mad in love GF</a></li>
         </ul>
+        <p>and with these three recipes you'll now learn what to do with your girlfriend, hopefully.</p>
     </body>
 </html>
