--- a/recipes/sadgf.html
+++ b/recipes/sadgf.html
@@ -7,7 +7,7 @@
     <title>Sad GF</title>
 </head>
 <body>
-    <h1><em>Happy Girlfriend</em></h1>
+    <h1><em>Sad Girlfriend</em></h1>
     <img src="" alt="a sad gf images">
     <h3>A Sad girlfriend means a sad day</h3>
     <h4>Ingredients</h4>
