--- a/recipes/sadgf.html
+++ b/recipes/sadgf.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><em>Sad Girlfriend</em></h1>
-    <img src="" alt="a sad gf images">
+    <img src="images/sadgf.jpg" alt="a sad gf images">
     <h3>A Sad girlfriend means a sad day</h3>
     <h4>Ingredients</h4>
         <ul>
