edit text to match file

--- a/recipes/sadgf.html
+++ b/recipes/sadgf.html
@@ -12,18 +12,18 @@
     <h3>A Sad girlfriend means a sad day</h3>
     <h4>Ingredients</h4>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Lack of kisses</li>
+            <li>No chocolate</li>
+            <li>No food</li>
+            <li>No flowers</li>
+            <li>Arguments</li>
         </ul>
     <h4>Steps</h4>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Don't give enough kisses</li>
+            <li>No flowers or chocolate</li>
+            <li>Don't give food</li>
+            <li>Have arguments</li>
         </ol>
     <h4>and viola, you have a <strong>SAD Girlfriend</strong></h4>
 </body>
