edit text for file

--- a/recipes/madinlovegf.html
+++ b/recipes/madinlovegf.html
@@ -12,18 +12,18 @@
     <h3>A Madly in love girlfriend means a perfect day</h3>
     <h4>Ingredients</h4>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>A lot of love</li>
+            <li>A load of kisses</li>
+            <li>Big amounts of chocolate and flowers</li>
+            <li>Hugs and cuddles</li>
+            <li><em>sexy time ;)</em></li>
         </ul>
     <h4>Steps</h4>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>You give girlfriend chocolate and flowers</li>
+            <li>Give gf lots of love</li>
+            <li>Hugs, cuddles and loads of kisses</li>
+            <li>And lastly <em>SEXY TIME</em></li>
         </ol>
     <h4>and viola, you have a <em><strong>Madly in love Girlfriend</strong></em></h4>
 </body>
