--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>My Odin Project GF recipes</h1>
         <p>here are some recipes on how to make gf <em>happy</em>, <em>sad</em> and <em>madly in love</em></p>
+        <img src="recipes/images/gf.jpeg" alt="gf image">
         <ul>
             <li><a href="recipes/happygf.html">Happy GF</a></li>
             <li><a href="recipes/sadgf.html">Sad GF</a></li>
