--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
         <meta charset="UTF-8">
         <title>my gf recipes</title>
     </head>
     <body>
         <h1>My Odin Project GF recipes</h1>
         <p>here are some recipes on how to make gf <em>happy</em>, <em>sad</em> and <em>madly in love</em></p>
-        <img src="recipes/images/gf.jpeg" alt="gf image" style="height: 400px; width: auto;">
+        <img src="recipes/images/gf.jpeg" alt="gf image">
         <ul>
             <li><a href="recipes/happygf.html">Happy GF</a></li>
             <li><a href="recipes/sadgf.html">Sad GF</a></li>
