nest the img tag in a div tag

--- a/recipes/happygf.html
+++ b/recipes/happygf.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1><em>Happy Girlfriend</em></h1>
-    <img src="images/happygf.jpeg" alt="a happy gf images">
+    <div><img src="images/happygf.jpeg" alt="a happy gf images"></div>
     <h3>A Happy girlfriend means a happy day</h3>
     <h4>Ingredients</h4>
         <ul>
