--- a/recipes/madinlovegf.html
+++ b/recipes/madinlovegf.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1><em>Mad in love Girlfriend</em></h1>
-    <img src="images/madinlove.jpg" alt="a madly in love gf images">
+    <div><img src="images/madinlove.jpg" alt="a madly in love gf images"></div>
     <h3>A Madly in love girlfriend means a perfect day</h3>
     <h4>Ingredients</h4>
         <ul>
