--- a/recipes/sadgf.html
+++ b/recipes/sadgf.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1><em>Sad Girlfriend</em></h1>
-    <img src="images/sadgf.jpg" alt="a sad gf images">
+    <div><img src="images/sadgf.jpg" alt="a sad gf images"></div>
     <h3>A Sad girlfriend means a sad day</h3>
     <h4>Ingredients</h4>
         <ul>
